--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Ever Github Repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <!--This is the Head Section-->
+<body>
+   <div>
+    <h3>my first blog</h3>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero rem architecto iusto aspernatur totam velit perferendis reprehenderit dolores, incidunt in culpa ut esse suscipit blanditiis, error odit nisi quod aut?
+   </div>
+   <div>
+    <h3>my second blog</h3>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero rem architecto iusto aspernatur totam velit perferendis reprehenderit dolores, incidunt in culpa ut esse suscipit blanditiis, error odit nisi quod aut?
+   </div>
+   <div>
+    <h3>my third blog</h3>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero rem architecto iusto aspernatur totam velit perferendis reprehenderit dolores, incidunt in culpa ut esse suscipit blanditiis, error odit nisi quod aut?
+   </div>
 </body>
 </html>
