added image & list

--- a/index.html
+++ b/index.html
@@ -3,23 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Ever Github Repo</title>
+    <title>My First Portfolio</title>
     <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    <!--This is the Head Section-->
-<body>
-   <div>
-    <h3>my first blog</h3>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero rem architecto iusto aspernatur totam velit perferendis reprehenderit dolores, incidunt in culpa ut esse suscipit blanditiis, error odit nisi quod aut?
-   </div>
-   <div>
-    <h3>my second blog</h3>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero rem architecto iusto aspernatur totam velit perferendis reprehenderit dolores, incidunt in culpa ut esse suscipit blanditiis, error odit nisi quod aut?
-   </div>
-   <div>
-    <h3>my third blog</h3>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero rem architecto iusto aspernatur totam velit perferendis reprehenderit dolores, incidunt in culpa ut esse suscipit blanditiis, error odit nisi quod aut?
-   </div>
+    <div class="main"></div>
+    <div class="navbar">
+    <img src="styles/trvl logo.jpg" class="logo" alt="">
+    <ul>
+        <li><a href="#">HOME</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">SKILLS</a></li>
+        <li><a href="#">MY WORKS</a></li>
+        <li><a href="#">CONTACT</a></li>
+    </ul>
+    </div>
 </body>
 </html>
